mknod[at]: Implement the case where the node type is S_IFIFO.

This is the only case the POSIX specification indicates is portable.
We may be able to implement some of the others that Linux or the BSDs
support if it turns out there are applications that want them, though.

Fixes #19032.
(cherry picked from commit 1c22c2608fc46aa8b2bf42a3160bf12cbd95a50f)

Change-Id: I10f936e0f58f3beb518e46a3e93e748dddeb0754
Reviewed-on: https://review.haiku-os.org/c/haiku/+/8129
Reviewed-by: waddlesplash <waddlesplash@gmail.com>